made changes to env file

--- a/pitchconnect-backend/.env
+++ b/pitchconnect-backend/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql://pitchconnect_db_user:PFREoNGlcdOktX9n4qV9tFTqs0ZyQlXY@dpg-d03f4qqdbo4c738b4740-a/pitchconnect_db
-
+DATABASE_URL=postgresql://pitchconnect_db_user:PFREoNGlcdOktX9n4qV9tFTqs0ZyQlXY@dpg-d03f4qqdbo4c738b4740-a.render.com/pitchconnect_db
